Need to specify the action of the form in order to get it to work properly

--- a/public_html/include-html/index.html
+++ b/public_html/include-html/index.html
@@ -1,5 +1,5 @@
 <div class="form">
-   <form action="index.php?action=play">
+   <form action="index.php?action=play" method="post">
    <input type="submit" value="Play the Game"/>
    </form>
 </div>
