Making sure offer.html action is all saved and in order

--- a/public_html/include-html/offer.html
+++ b/public_html/include-html/offer.html
@@ -1,5 +1,5 @@
 <div class="form">
-   <form action="index.php?action=offer" method="post" name="register">
+   <form action="index.php?action=offer" method="post">
      <p>Offer: </p>
      <input type="text" name="offer" />
      <br />
