Added some description of the game to the homepage.

--- a/public_html/include-html/index.html
+++ b/public_html/include-html/index.html
@@ -1,5 +1,6 @@
 <div class="form">
+  <p>I've put this site together to collect data for a piece of coursework I've been given as part of the first year of my PhD. All you have to do to participate is to play the "Ultimatum Game", a very simple game that I'll explain in a moment. It'll only take you a few moments to play. Click on the button below to get started.
   <form action="index.php?action=play" method="post">
-    <input type="submit" value="Play the Game"/>
+    <input type="submit" value="Play"/>
   </form>
 </div>
