Changed the blurb on the homepage

--- a/public_html/include-html/index.html
+++ b/public_html/include-html/index.html
@@ -1,5 +1,8 @@
+<p>I've put this site together to collect data for a piece of coursework I've been given as part of the first year of my PhD. All you have to do to participate is to play the "Ultimatum Game".</p>
+<p>The game has two parts, and you'll be randomly allocated a role when you begin. Player 1 is given one hundred pound coins, dollar coins, or other currency. They must then decide how many of these coins they will offer to Player 2, ranging from none of them to all of them.</p>
+<p>Player 2 may decide whether to accept the offer or not. If they accept, they receive the number of coins offered to them by Player 1, with Player 1 receiving the remaining coins. If they refuse the offer, then neither player receives anything.</p>
+<p>To begin, click the button below.</p>
 <div class="form">
-  <p>I've put this site together to collect data for a piece of coursework I've been given as part of the first year of my PhD. All you have to do to participate is to play the "Ultimatum Game", a very simple game that I'll explain in a moment. It'll only take you a few moments to play. Click on the button below to get started.
   <form action="index.php?action=play" method="post">
     <input type="submit" value="Play"/>
   </form>
