Grammar edit on the home page.

--- a/public_html_ug/include-html/index.html
+++ b/public_html_ug/include-html/index.html
@@ -1,4 +1,4 @@
-<p>I've put this site together to collect data for a piece of coursework I've been given as part of the first year of my PhD. All you have to do to participate is to play the "Ultimatum Game".</p>
+<p>I've put this site together to collect data for a piece of coursework I've been given as part of the first year of my PhD. All you have to do to participate is play the "Ultimatum Game".</p>
 <p>The game has two parts, and you'll be randomly allocated a role when you begin. Player 1 is given one hundred pound coins, dollar coins, or other currency. They must then decide how many of these coins they will offer to Player 2, ranging from none of them to all of them.</p>
 <p>Player 2 must then decide whether to accept the offer or not. If they accept, they receive the number of coins offered to them by Player 1, with Player 1 receiving the remaining coins. If they refuse the offer, then neither player receives anything.</p>
 <p>Regardless of which player you are, it is important that you complete the game as though the scenario were real and you are offering or being offered real coins.</p>
